# cpsvpn

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cpyvpn/: auth.py  cfg.py  client.py  crt.py  cui.py  ma.py  rsa.py  server.py  snx.py  ssl_ctx.py  trutils.py  utils.py  vna.py
cpyvpn/data/: cert.pem  cl_cert.pem  cl_key.pem  key.pem  rr.js  rsa.keys
