[metadata]
name = cpyvpn
author = Nikolay A. Krylov
author_email = krylovna@gmail.com
url = https://gitlab.com/cpvpn/cpyvpn
description = Check Point VPN client written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
python_requires = >=3.7
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Networking
    Operating System :: POSIX
    Operating System :: Unix
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
keywords = CheckPoint vpn snx
project_urls =
    PyPI = https://pypi.org/project/cpyvpn
    Source = https://gitlab.com/cpvpn/cpyvpn
    Tracker = https://gitlab.com/cpvpn/cpyvpn/issues

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    cp_client = cpyvpn.client:main
    cp_server = cpyvpn.server:main
    cpga = cpyvpn.ma:main
